Prevent hero foot logos from overflowing
Elements wrap and have a max width of 33% so there is enough space for 3 side by side.

--- a/assets/fresh/partials/_hero.scss
+++ b/assets/fresh/partials/_hero.scss
@@ -24,4 +24,17 @@ Hero styles
     img.partner-logo {
         height: 70px;
     }
+    .tabs {
+        ul {
+            flex-wrap: wrap;
+            max-width: 100%;
+        }
+        a {
+            border-bottom: none;
+        }
+        li {
+            // Minimum of 3 elements wide
+            max-width: 33%;
+        }
+    }
 }
